# aphrograph

./: .gitignore  .hlint.yaml  .stan.toml  .weeder.yaml  ChangeLog.md  README.md  aphrograph.cabal  brittany.yaml  cabal.config  hie.yaml  package.yaml  stack.yaml  weeder.dhall
app/: Main.dump-hi  Main.hs
src/: Aphrograph.hs  App.dump-hi  App.hs  Args.hs  Brick.hs  Display.dump-hi  Display.hs  ErrorHandling.hs  Events.dump-hi  Events.hs  Graphite.dump-hi  Graphite.hs  Labels.hs  Logging.hs  Normalisation.dump-hi  Normalisation.hs  Prelude.dump-hi  Prelude.hs
src/App/: Args.dump-hi  Args.hs  Components.hs  Config.dump-hi  Config.hs  Http.hs  Logging.dump-hi  Logging.hs  State.dump-hi  State.hs
src/Display/: Canvas.dump-hi  Canvas.hs  Graph.dump-hi  Graph.hs  GraphWidget.hs  Labels.dump-hi  Labels.hs  Projection.dump-hi  Projection.hs  TimeDialogueWidget.hs  Types.dump-hi  Types.hs  Widgets.dump-hi  Widgets.hs
src/Display/Graph/: GraphBuilder.hs  Widget.dump-hi  Widget.hs
src/Display/Projection/: Scalable.dump-hi  Scalable.hs
src/Events/: Types.hs
src/Graphite/: Types.dump-hi  Types.hs
src/Labels/: Orientation.hs
src/brick/: Display.hs  Events.hs
src/brick/Display/: Axis.hs  Graph.hs  Labels.hs  Types.hs  Widgets.hs
src/brick/Display/Graph/: GraphBuilder.hs
src/curses/: App.hs  Axis.hs  Display.hs  Graph.hs
src/curses/Display/: Types.hs
test/: AppSpec.hs  ArbitraryInstances.hs  ArgsSpec.hs  AxisSpec.hs  CommonProperties.hs  ComponentMock.hs  DerivedArbitraryInstances.hs  DisplaySpec.hs  ErrorHandlingSpec.hs  EventsSpec.hs  GraphSpec.hs  GraphiteMock.hs  GraphiteSpec.hs  LabelsSpec.hs  NormalisationSpec.hs  Spec.hs  WidgetsSpec.hs
test/App/: StateSpec.hs
test/Display/: DisplaySpec.hs  GraphBuilderSpec.hs  GraphSpec.hs  ProjectionSpec.hs  WidgetsSpec.hs
test/Test/: Orphans.hs  Tools.hs  Types.hs
test/end2end/: FullSpec.hs
test/unit/: CommonProperties.hs  EventsSpec.hs  NormalisationSpec.hs
test/unit/Display/: ProjectionSpec.hs  WidgetsSpec.hs
